Bugs + scrollbar

--- a/argentina-programa-frontend-dinamico/src/app/componentes/footer/footer.component.css
+++ b/argentina-programa-frontend-dinamico/src/app/componentes/footer/footer.component.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     padding:10px 20px;
+    margin-top: 30px;
   
 }
 
